# trie_pattern_recognition

./: .gitignore  CMakeLists.txt
main/: main_driver.cpp  trie_demonstration.cpp
src/: pattern_recognition.cpp  pattern_recognition.hpp  trie.cpp  trie.hpp
